// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/more/edit/native should match snapshot when content is empty 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View>
    <TextInput
      accessibilityLabel="Text input. Empty"
      activeFormats={Array []}
      blockType={
        Object {
          "tag": "pre",
        }
      }
      disableEditingMenu={false}
      fontFamily="serif"
      fontSize={16}
      isMultiline={false}
      maxImagesWidth={200}
      onBlur={[Function]}
      onChange={[Function]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPaste={[Function]}
      onSelectionChange={[Function]}
      placeholder="Write preformatted text…"
      placeholderTextColor="gray"
      triggerKeyCodes={Array []}
      value=""
    />
  </View>
</View>
`;

exports[`core/more/edit/native should match snapshot when content is not empty 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View>
    <TextInput
      accessibilityLabel="Text input. <pre>Hello World!</pre>"
      activeFormats={Array []}
      blockType={
        Object {
          "tag": "pre",
        }
      }
      disableEditingMenu={false}
      fontFamily="serif"
      fontSize={16}
      isMultiline={false}
      maxImagesWidth={200}
      onBlur={[Function]}
      onChange={[Function]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPaste={[Function]}
      onSelectionChange={[Function]}
      placeholder="Write preformatted text…"
      placeholderTextColor="gray"
      triggerKeyCodes={Array []}
      value="<pre>Hello World!</pre>"
    />
  </View>
</View>
`;
